# use-case-manager

./: README  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  QUICK_START.md  README.md  alembic.ini  docker-compose.yml  main.py  ngrok.sh  pyproject.toml  run.sh  sample_transcript.txt  scaffold.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_chat_messages.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  dependencies.py  environment.py  main.py
backend/app/ai/: __init__.py  chains.py  chunker.py  embedder.py  knowledge_base.py  pdf_converter.py
backend/app/clients/: __init__.py  openai_client.py
backend/app/handlers/: __init__.py  chat.py  comments.py  companies.py  industries.py  search.py  transcripts.py  use_cases.py  users.py
backend/app/models/: __init__.py  base.py  chat_message.py  comment.py  company.py  enums.py  industry.py  transcript.py  use_case.py  use_case_relation.py  user.py
backend/app/repository/: __init__.py  base.py  chat_message_repo.py  comment_repo.py  company_repo.py  industry_repo.py  transcript_repo.py  use_case_repo.py  user_repo.py
backend/app/schemas/: __init__.py  chat_message.py  comment.py  company.py  industry.py  pagination.py  transcript.py  use_case.py  user.py
backend/app/services/: __init__.py  chat_service.py  comment_service.py  company_service.py  search_service.py  transcript_service.py  use_case_service.py
backend/app/tasks/: __init__.py  company_tasks.py  transcript_tasks.py
backend/docs/: openapi.yaml
client/: .gitignore  (+2 more)
(+30 files in other folders)
