[tool.poetry]
name = "usecase-manager"
version = "0.1.0"
description = "AI-powered use case management from workshop transcripts"
authors = ["abdel_latrache <latrache.abdel.fr@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
fastapi-users = { extras = ["sqlalchemy"], version = "^13.0.0" }
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
psycopg2-binary = "^2.9"
qdrant-client = "^1.13.2"
alembic = "^1.13"
celery = {extras = ["redis"], version = "^5.4"}
redis = {extras = ["asyncio"], version = "^5.0"}
langchain = "^0.3"
langchain-openai = "^0.2"
langchain-qdrant = "^0.2.0"
langgraph = "^0.2"
openai = "^1.40"
pypdf = "^5.0"
pydantic-settings = "^2.4"
gunicorn = "^25.1.0"
dotenv = "^0.9.9"

[tool.poetry.dev-dependencies]
pytest = "^8"
pytest-asyncio = "^0.23"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
